[package]
name = "spacemod"
version = "0.1.0"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"
regex = "1.4.2"
anyhow = "1.0.34"
ignore = "0.4.16"
console = "0.13.0"
itertools = "0.10.0"
num_cpus = "1.15.0"
blake3 = "1.4.0"
rayon = "1.7.0"
similar = { version = "2.2.1", features = ["text"] }

# Disable clap's suggestions feature, because it sometimes suggests nonsense:
# https://github.com/clap-rs/clap/discussions/3962
clap = { version = "3.2.8", features = ["std", "derive", "color"], default-features = false }

[dev-dependencies]
# https://github.com/mitsuhiko/insta-cmd/issues/7
insta = "=1.18.0"
insta-cmd = "0.2.0"
tempfile = "3.6.0"
