[package]
name = "spacemod"
version = "0.1.1"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
repository = "https://github.com/untitaker/spacemod"
homepage = "https://github.com/untitaker/quickenv"
documentation = "https://github.com/untitaker/quickenv"
description = "A easy to understand and powerful text search-and-replace tool"
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"
regex = "1.4.2"
anyhow = "1.0.34"
ignore = "0.4.16"
console = "0.13.0"
itertools = "0.10.0"
num_cpus = "1.15.0"
blake3 = "1.4.0"
rayon = "1.7.0"
similar = { version = "2.2.1", features = ["text"] }

# Disable clap's suggestions feature, because it sometimes suggests nonsense:
# https://github.com/clap-rs/clap/discussions/3962
clap = { version = "3.2.8", features = ["std", "derive", "color"], default-features = false }

[dev-dependencies]
insta = "1.30.0"
insta-cmd = "0.3.0"
tempfile = "3.6.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@untitaker"
